Changed runtime from java17 to java8